--- a/styles.css
+++ b/styles.css
@@ -50,8 +50,8 @@ nav a {
 .description {
     position: absolute;
     top: 50%;
-    left: 20%;
-    transform: translate(-25%, -50%);
+    left: 5%;
+    transform: translateY(-50%);
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
     padding: 20px;
