--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ nav a {
     position: absolute;
     top: 50%;
     left: 5%;
-    transform: translateY(-50%);
+    transform: translate(0%, -50%);
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
     padding: 20px;
