--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
-
-
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #2b2c2d;
+    background-color: #f4f4f4;
     color: #333;
 }
 
@@ -14,11 +12,12 @@ body {
     padding: 0 20px; /* Add padding to the container for better readability */
 }
 
-header {
-    background-color: #2b2c2d;
-    color: #c6c7c9;
+header#top-banner {
+    background-color: rgba(43, 44, 45, 0.7); /* Adjust the alpha value for transparency */
+    color: #fff;
     text-align: center;
     padding: 20px 0;
+    position: relative;
 }
 
 h1 {
@@ -27,7 +26,10 @@ h1 {
 }
 
 nav {
-    margin-top: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 nav a {
@@ -38,7 +40,7 @@ nav a {
 
 #main-banner {
     position: relative;
-    max-width: 100%;
+    width: 100vw; /* Set the width to 100% of viewport width */
     overflow: hidden;
 }
 
@@ -46,8 +48,6 @@ nav a {
     width: 100%;
     height: auto;
     display: block;
-    max-width: 100%;
-    border: 2px double #fff;
 }
 
 .description {
@@ -71,15 +71,10 @@ nav a {
         margin: 0 10px; /* Adjust margin for navigation links on smaller screens */
     }
 
-    #main-banner img {
-        height: auto;
-    }
-
     .description {
         padding: 10px;
         font-size: 14px;
     }
 }
 
-/* Add more media queries as needed for specific breakpoints */
 
