--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 header#top-banner {
-    background-color: rgba(43, 44, 45, 0.7); /* Adjust the alpha value for transparency */
+    background: url('EthanBanner.jpg') center/cover no-repeat; /* Set the image as background */
     color: #fff;
     text-align: center;
     padding: 20px 0;
@@ -38,20 +38,6 @@ nav a {
     color: #fff;
     margin: 0 15px;
     text-decoration: none;
-}
-
-#main-banner {
-    position: relative;
-    width: 100vw;
-    overflow: hidden;
-    z-index: 1; /* Ensure the image is in front of the navigation */
-}
-
-#main-banner img {
-    width: 100%;
-    height: auto;
-    display: block;
-    margin-left: -1px; /* Adjust for potential small gaps between inline elements */
 }
 
 .description {
