--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
     color: #333;
 }
 
@@ -13,7 +12,10 @@ body {
 }
 
 header#top-banner {
-    background: url('EthanBanner.jpg') center/cover no-repeat; /* Set the image as background */
+    background-image: url('EthanBanner.jpg'); /* Set the image as background */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     color: #fff;
     text-align: center;
     padding: 20px 0;
