--- a/styles.css
+++ b/styles.css
@@ -12,16 +12,25 @@ body {
     padding: 0 20px; /* Add padding to the container for better readability */
 }
 
-header#top-banner {
+#background-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: url('EthanBanner.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    z-index: 0; /* Ensure the background is behind everything */
+}
+
+header#top-banner {
     color: #fff;
     text-align: center;
     padding: 20px 0;
     position: relative;
-    z-index: 1; /* Ensure the navigation is below the image */
+    z-index: 1; /* Ensure the navigation is above the image */
 }
 
 h1 {
