I was missing an "n"

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*Start of CSS*/
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -75,3 +76,4 @@ nav a {
     }
 }
 
+/*End of CSS*/
