--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/*Start of CSS*/
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -41,6 +40,9 @@ nav {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2; /* Ensure the navigation is above the image */
+    background-color: rgba(0, 0, 0, 0.7); /* Translucent background */
+    border-radius: 8px; /* Add border-radius for rounded corners */
+    padding: 10px; /* Add padding for better aesthetics */
 }
 
 nav a {
@@ -76,4 +78,3 @@ nav a {
     }
 }
 
-/*End of CSS*/
