--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ nav a {
     color: #fff;
     margin: 0 15px;
     text-decoration: none;
+    font-size: 1.2em; /* Adjust the font size as needed */
 }
 
 .description {
@@ -74,6 +75,16 @@ nav a {
     border-radius: 8px;
 }
 
+.resume-button {
+    display: inline-block;
+    background-color: #2b2c2d;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 8px;
+    margin-top: 20px; /* Adjust margin for spacing */
+}
+
 /* Media Queries for Responsive Design */
 @media screen and (max-width: 768px) {
     .container {
@@ -82,6 +93,7 @@ nav a {
 
     nav a {
         margin: 0 10px;
+        font-size: 1em; /* Adjust the font size for smaller screens */
     }
 
     .description {
