--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ nav {
     position: absolute;
     top: 0;
     left: 50%; /* Center the navigation horizontally */
-    transform: translateX(-50%); /* Adjust to center properly */
+    /*transform: translateX(-50%);  Adjust to center properly */
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 2;
     display: flex;
