--- a/styles.css
+++ b/styles.css
@@ -59,10 +59,11 @@ nav {
     /*transform: translateX(-50%);  Adjust to center properly */
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 2;
-    display: flex;
+    /*display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: center;*/
     padding: 0 20px;
+    float: right;
 }
 
 
