--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,8 @@ nav {
     /*transform: translateX(-50%);  Adjust to center properly */
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 2;
-    /*display: flex;
-    justify-content: space-around;
+    display: flex;
+    /*justify-content: space-around;
     align-items: center;*/
     padding: 0 20px;
     
