--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,8 @@ nav {
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 2;
     display: flex;
-    /*justify-content: space-around;
-    align-items: center;*/
+    justify-content: space-around;
+    /*align-items: center;*/
     padding: 0 20px;
     
 }
