--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ h1 a {
 }
 
 nav {
-    position: absolute;
+    position: static;
     top: 0;
     left: 50%; /* Center the navigation horizontally */
     /*transform: translateX(-50%);  Adjust to center properly */
