--- a/styles.css
+++ b/styles.css
@@ -51,20 +51,20 @@ h1 a {
     padding: 10px; /* Adjust padding for better styling */
     border-radius: 8px; /* Add border-radius for rounded corners */
 }
-
 nav {
-    position: static;
+    position: absolute;
     top: 0;
-    left: 50%; /* Center the navigation horizontally */
-    /*transform: translateX(-50%);  Adjust to center properly */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60%; /* Adjust the width as needed */
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 2;
     display: flex;
     justify-content: space-around;
-    /*align-items: center;*/
+    align-items: center;
     padding: 0 20px;
-    
 }
+
 
 
 
