Maybe Hamburger menu

--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ nav a {
   .bar {
     width: 30px;
     height: 3px;
-    background-color: #fff;
+    background-color: #ff0000;
     margin: 6px 0;
   }
   
