--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,7 @@ nav a {
         position: absolute;
         top: 20px;
         right: 20px;
+        transform: translate(50%,-50%);
         cursor: pointer;
         
         color: #333;
