--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ h1 a {
 /* Dropdown Button */
 .dropbtn {
     background-color: #3498DB;
-    color: white;
+    color: #2b2c2d;
     padding: 16px;
     font-size: 16px;
     border: none;
@@ -98,7 +98,7 @@ h1 a {
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: #2b2c2d;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
