--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ h1 a {
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #2b2c2d;
+    background-color: #ffffff;
     min-width: 160px;
     z-index: 1;
   }
