--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ h1 a {
   
   /* Links inside the dropdown */
   .dropdown-content a {
-    color: white !important;
+    color: white ;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
