--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ h1 a {
 .resume-button {
     display: inline-block;
     background-color: #2b2c2d;
-    color: #2b2c2d;
+    color: #ffffff;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 8px;
