--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,15 @@ h1 a {
     border-radius: 8px; /* Add border-radius for rounded corners */
 }
 
-
+.CellNumStyl{
+text-align: left;
+}
+.EmailStyl{
+text-align: right;
+}
+.ContactDivider{
+    text-align: center;
+}
 .description {
     position: absolute;
     top: 50%;
@@ -119,12 +127,79 @@ h1 a {
   
 /* Media Queries for Responsive Design */
 @media screen and (max-width: 768px) {
-    .container {
-        padding: 0 10px;
-    }
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+    color: #333;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+}
 
-    .description {
-        padding: 10px;
-        font-size: 14px;
-    }
+#background-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('EthanBanner.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: -1; /* Move the background behind everything */
+}
+
+.container {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 10px; /* Adjusted padding to improve scalability */
+}
+
+header#top-banner {
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    position: relative;
+    z-index: 1; /* Ensure the navigation is above the image */
+}
+
+h1 {
+    margin: 0;
+    font-size: 2em;
+    position: absolute;
+    top: 0;
+    left: 10px; /* Adjusted left position */
+}
+
+h1 a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: inherit; /* Inherit the font weight from the navigation */
+    background-color: rgba(0, 0, 0, 0.7); /* Background color for the name */
+    padding: 10px; /* Adjust padding for better styling */
+    border-radius: 8px; /* Add border-radius for rounded corners */
+}
+
+.description {
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    transform: translate(0%, -50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.resume-button {
+    display: inline-block;
+    background-color: #2b2c2d;
+    color: #ffffff;
+    padding: 10px 15px; /* Adjusted padding for better scalability */
+    text-decoration: none;
+    border-radius: 8px;
+    margin-top: 20px; /* Adjust margin for spacing */
+}
+
+
 }
