--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
-/* Updated CSS */
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
-    overflow-x: hidden; /* Prevent horizontal scrolling */
+    overflow-x: hidden;
 }
 
 #background-image {
@@ -18,13 +17,13 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    z-index: -1; /* Move the background behind everything */
+    z-index: -1; 
 }
 
 .container {
     max-width: 100%;
     margin: 0 auto;
-    padding: 0 20px; /* Add padding to the container for better readability */
+    padding: 0 20px; 
 }
 
 header#top-banner {
@@ -32,7 +31,7 @@ header#top-banner {
     text-align: center;
     padding: 20px 0;
     position: relative;
-    z-index: 1; /* Ensure the navigation is above the image */
+    z-index: 1; 
 }
 
 h1 {
@@ -40,16 +39,16 @@ h1 {
     font-size: 2em;
     position: absolute;
     top: 0;
-    left: 20px; /* Adjusted left position */
+    left: 20px; 
 }
 
 h1 a {
     color: #fff;
     text-decoration: none;
-    font-weight: inherit; /* Inherit the font weight from the navigation */
-    background-color: rgba(0, 0, 0, 0.7); /* Background color for the name */
-    padding: 10px; /* Adjust padding for better styling */
-    border-radius: 8px; /* Add border-radius for rounded corners */
+    font-weight: inherit; 
+    background-color: rgba(0, 0, 0, 0.7); 
+    padding: 10px; 
+    border-radius: 8px; 
 }
 
 .CellNumStyl{
@@ -71,30 +70,29 @@ text-align: right;
     padding: 20px;
     border-radius: 8px;
 }
-/* The Modal (background) */
+
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
   }
   
-  /* Modal Content/Box */
+
   .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto; 
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
+    width: 80%; 
   
-  /* The Close Button */
+  }
   .close {
     color: #aaa;
     float: right;
@@ -115,9 +113,9 @@ text-align: right;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 8px;
-    margin-top: 20px; /* Adjust margin for spacing */
+    margin-top: 20px;
 }
-/* Dropdown Button */
+
 .dropbtn {
     background-color: #3498DB;
     color: #2b2c2d;
@@ -127,18 +125,18 @@ text-align: right;
     cursor: pointer;
   }
   
-  /* Dropdown button on hover & focus */
+ 
   .dropbtn:hover, .dropbtn:focus {
     background-color: #2980B9;
   }
   
-  /* The container <div> - needed to position the dropdown content */
+  
   .dropdown {
     position: relative;
     display: inline-block;
   }
   
-  /* Dropdown Content (Hidden by Default) */
+ 
   .dropdown-content {
     display: none;
     position: absolute;
@@ -147,7 +145,7 @@ text-align: right;
     z-index: 1;
   }
   
-  /* Links inside the dropdown */
+  
   .dropdown-content a {
     color: white ;
     padding: 12px 16px;
@@ -155,13 +153,12 @@ text-align: right;
     display: block;
   }
   
-  /* Change color of dropdown links on hover */
+  
   .dropdown-content a:hover {background-color: #ddd;}
   
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
   .show {display:block;}
   
-/* Media Queries for Responsive Design */
+
 @media screen and (max-width: 768px) {
 body {
     font-family: 'Arial', sans-serif;
@@ -169,7 +166,7 @@ body {
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
-    overflow-x: hidden; /* Prevent horizontal scrolling */
+    overflow-x: hidden; 
 }
 
 #background-image {
@@ -182,13 +179,13 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    z-index: -1; /* Move the background behind everything */
+    z-index: -1; 
 }
 
 .container {
     max-width: 100%;
     margin: 0 auto;
-    padding: 0 10px; /* Adjusted padding to improve scalability */
+    padding: 0 10px; 
 }
 
 header#top-banner {
@@ -196,24 +193,22 @@ header#top-banner {
     text-align: center;
     padding: 20px 0;
     position: relative;
-    z-index: 1; /* Ensure the navigation is above the image */
+    z-index: 1; 
 }
-
 h1 {
     margin: 0;
     font-size: 2em;
     position: absolute;
     top: 0;
-    left: 10px; /* Adjusted left position */
+    left: 10px;
 }
-
 h1 a {
     color: #fff;
     text-decoration: none;
-    font-weight: inherit; /* Inherit the font weight from the navigation */
-    background-color: rgba(0, 0, 0, 0.7); /* Background color for the name */
-    padding: 10px; /* Adjust padding for better styling */
-    border-radius: 8px; /* Add border-radius for rounded corners */
+    font-weight: inherit;
+    background-color: rgba(0, 0, 0, 0.7); 
+    padding: 10px; 
+    border-radius: 8px; 
 }
 
 .description {
@@ -231,11 +226,10 @@ h1 a {
     display: inline-block;
     background-color: #2b2c2d;
     color: #ffffff;
-    padding: 10px 15px; /* Adjusted padding for better scalability */
+    padding: 10px 15px; 
     text-decoration: none;
     border-radius: 8px;
-    margin-top: 20px; /* Adjust margin for spacing */
+    margin-top: 20px;
 }
-
 
 }
