--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,9 @@ body {
     color: #333;
     overflow-x: hidden;
 }
-
+.qr-container{
+  background-image: url("instaqr.png");
+}
 #background-image {
     position: fixed;
     top: 0;
