--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,16 @@ body {
     color: #333;
     overflow-x: hidden;
 }
-.qr-container{
+#qr-container{
   background-image: url("instaqr.png");
+  background-size: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 2;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  margin: 5px 0;
 }
 #background-image {
     position: fixed;
