--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,14 @@ body {
 }
 #qr-container{
   background-image: url("instaqr.png");
-  /*background-size: auto;*/
+  /*background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
   z-index: 2;
-  /*height: 100%;
-  width: 100%;*/
+  height: 100%;
+  width: 100%;
   position: fixed;
-  margin: 5px 0;
+  margin: 5px 0;*/
 }
 #background-image {
     position: fixed;
