--- a/styles.css
+++ b/styles.css
@@ -18,10 +18,12 @@ body {
   margin: 5px 0;
 }*/
 #closePopup{
-  transform: translate(50%,-10%);
+
+  align-self: center;
 }
 #instagramQR {
-  transform: translateX(50%);
+
+  align-self: center;
 }
 #background-image {
     position: fixed;
