--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body {
     color: #333;
     overflow-x: hidden;
 }
-/*#qr-container{
-  image: url("instaqr.png");
+#qr-container{
+  background-image: url("instaqr.png");
   background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
@@ -16,15 +16,15 @@ body {
   width: 100%;
   position: fixed;
   margin: 5px 0;
-}*/
+}
 #closePopup{
 
   align-self: center;
 }
-#instagramQR {
+/*#instagramQR {
 
   align-self: center;
-}
+}*/
 #background-image {
     position: fixed;
     top: 0;
