--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,13 @@ h1 a {
     padding: 10px; 
     border-radius: 8px; 
 }
-
+#JvEn{
+    margin: 0;
+    font-size: 2em;
+    position: absolute;
+    top: 0;
+    left: 50px;
+}
 .CellNumStyl{
 text-align: left;
 }
