--- a/styles.css
+++ b/styles.css
@@ -95,10 +95,15 @@ h1 a {
 }
 #JvEn{
     margin: 0;
-    font-size: 2em;
     position: absolute;
     top: 0;
     left: 50px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: inherit; 
+    background-color: rgba(0, 0, 0, 0.7); 
+    padding: 10px; 
+    border-radius: 8px; 
 }
 .CellNumStyl{
 text-align: left;
