--- a/styles.css
+++ b/styles.css
@@ -93,17 +93,16 @@ h1 a {
     padding: 10px; 
     border-radius: 8px; 
 }
-#JvEn{
-    margin: 0;
-    position: absolute;
-    top: 0;
-    left: 50px;
+h3 a{
     color: #fff;
     text-decoration: none;
     font-weight: inherit; 
     background-color: rgba(0, 0, 0, 0.7); 
     padding: 10px; 
     border-radius: 8px; 
+    position: absolute;
+    top: 0;
+    left: 50px;
 }
 .CellNumStyl{
 text-align: left;
