--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ h3 a{
     border-radius: 8px; 
     position: absolute;
     top: 0;
-    left: 150px;
+    left: 20%;
 }
 .CellNumStyl{
 text-align: left;
