--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,8 @@ h3 a{
     border-radius: 8px; 
     position: absolute;
     top: 0;
-    left: 20%;
+    left: 20px;
+    transform: translateX(50%);
 }
 .CellNumStyl{
 text-align: left;
