They were hidden :(

--- a/styles.css
+++ b/styles.css
@@ -184,10 +184,10 @@ text-align: right;
   margin: auto;
 }
 
-/* Hide the images by default */
+/* Hide the images by default 
 .mySlides {
   display: none;
-}
+}*/
 
 /* Next & previous buttons */
 .prev, .next {
