Float Images right

--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,7 @@ text-align: right;
   max-width: 1000px;
   position: relative;
   margin: auto;
+  float: right;
 }
 
 /* Hide the images by default 
