--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,11 @@ text-align: right;
   max-width: 1000px;
   position: absolute;
   top: 50%;
-  left: 60%;
+  left: 50%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 20px;
+  border-radius: 8px;
 }
 
 /* Hide the images by default 
