--- a/styles.css
+++ b/styles.css
@@ -186,9 +186,10 @@ text-align: right;
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
-  position: absolute;
-  top: 25%;
-  left: 40%;
+  position: relative;
+  display: inline-block;
+  /*top: 25%;
+  left: 40%;*/
   background-color: rgba(0, 0, 0, 0.7);
   color: #fff;
   padding: 20px;
