--- a/EnHtml/styles.css
+++ b/EnHtml/styles.css
@@ -7,7 +7,7 @@ body {
     overflow-x: hidden;
 }
 #qr-container{
-  background-image: url("instaqr.png");
+  background-image: url('/Images/instaqr.png');
   background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
@@ -31,7 +31,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('EthanBanner.jpg');
+    background-image: url('/Images/EthanBanner.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -291,7 +291,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('EthanBanner.jpg');
+    background-image: url('/Images/EthanBanner.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
