--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   z-index: 2;
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  margin: 5px 0;
+  display: block;
+  
 }
 #closePopup{
 
