--- a/styles.css
+++ b/styles.css
@@ -1,111 +1,120 @@
 body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
-    overflow-x: hidden;
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+  color: #333;
+  overflow-x: hidden;
 }
+/*
 #qr-container{
-  background-image: url('./instaqr.png');
-  background-size: auto;
-  background-position: center;
-  background-repeat: no-repeat;
-  z-index: 2;
-  display: block;
-  
-}
-#closePopup{
+background-image: url('./instaqr.png');
+background-size: auto;
+background-position: center;
+background-repeat: no-repeat;
+z-index: 2;
 
-  align-self: center;
 }
+*/
+
 /*#instagramQR {
 
-  align-self: center;
+align-self: center;
 }*/
 #background-image {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('./EthanBanner.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    z-index: -1; 
-}
-.popup {
   position: fixed;
-  z-index: 1;
-  left: 0;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
-  display: none;
+  background-image: url('./EthanBanner.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -1; 
+}
+.popup {
+position: fixed;
+z-index: 1;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+overflow: auto;
+background-color: rgba(0, 0, 0, 0.4);
+display: none;
 }
 .popup-content {
-  background-color: white;
-  margin: 10% auto;
-  padding: 20px;
-  border: 1px solid #888888;
-  width: 30%;
-  font-weight: bolder;
+background-color: rgba(0, 0, 0, 0.7);
+border-radius: 8px;
+margin: 10% auto;
+padding: 20px;
+border: none;
+width: 30%;
+font-weight: bolder;
+background-image: url('./instaqr.png');
+background-repeat: no-repeat;
+background-position-y: 20%;
+background-position-x: 50%;
+height: 400px;
+width: 300px;
 }
 .popup-content button {
-  display: block;
-  margin: 0 auto;
+display: block;
+position: absolute;
+top: 73%;
+Left: 47.5%;
+margin: 0 auto;
+align-self: center;
 }
 .show {
-  display: block;
+display: block;
 }
 .container {
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 0 20px; 
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 20px; 
 }
 
 header#top-banner {
-    color: #fff;
-    text-align: center;
-    padding: 20px 0;
-    position: relative;
-    z-index: 1; 
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+  position: relative;
+  z-index: 1; 
 }
 
 h1 {
-    margin: 0;
-    font-size: 2em;
-    position: absolute;
-    top: 0;
-    left: 20px; 
+  margin: 0;
+  font-size: 2em;
+  position: absolute;
+  top: 0;
+  left: 20px; 
 }
 
 h1 a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: inherit; 
-    background-color: rgba(0, 0, 0, 0.7); 
-    padding: 10px; 
-    border-radius: 8px; 
+  color: #fff;
+  text-decoration: none;
+  font-weight: inherit; 
+  background-color: rgba(0, 0, 0, 0.7); 
+  padding: 10px; 
+  border-radius: 8px; 
 }
 h3 a{
-    color: #fff;
-    text-decoration: none;
-    font-weight: inherit; 
-    background-color: rgba(0, 0, 0, 0.7); 
-    padding: 10px; 
-    border-radius: 8px; 
-    position: absolute;
-    top: 0;
-    left: 250px;
-    margin: 0;
+  color: #fff;
+  text-decoration: none;
+  font-weight: inherit; 
+  background-color: rgba(0, 0, 0, 0.7); 
+  padding: 10px; 
+  border-radius: 8px; 
+  position: absolute;
+  top: 0;
+  left: 250px;
+  margin: 0;
 }
 #body-container{
-  display: flex;
-  margin: 0 20px;
+display: inline;
+margin: 0 20px;
 }
 
 .CellNumStyl{
@@ -115,235 +124,235 @@ text-align: left;
 text-align: right;
 }
 .ContactDivider{
-    text-align: center;
+  text-align: center;
 }
 .description {
-    position: absolute;
-    top: 50%;
-    left: 5%;
-    transform: translate(0%, -50%);
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-}
-
-.resume-button {
-    display: inline-block;
-    background-color: #2b2c2d;
-    color: #ffffff;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 8px;
-    margin-top: 20px;
-}
-
-.dropbtn {
-    background-color: #3498DB;
-    color: #2b2c2d;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
- 
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
-  
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
- 
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #2b2c2d;
-    min-width: 160px;
-    z-index: 1;
-  }
-  
-  
-  .dropdown-content a {
-    color: white ;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  .show {display:block;}
-  * {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  display: inline-block;
-  /*top: 25%;
-  left: 40%;*/
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  transform: translate(0%, -50%);
   background-color: rgba(0, 0, 0, 0.7);
   color: #fff;
   padding: 20px;
   border-radius: 8px;
 }
 
+.resume-button {
+  display: inline-block;
+  background-color: #2b2c2d;
+  color: #ffffff;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 8px;
+  margin-top: 20px;
+}
+
+.dropbtn {
+  background-color: #3498DB;
+  color: #2b2c2d;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #2b2c2d;
+  min-width: 160px;
+  z-index: 1;
+}
+
+
+.dropdown-content a {
+  color: white ;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.show {display:block;}
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+max-width: 1000px;
+position: absolute;
+display: inline;
+top: 25%;
+left: 40%;
+background-color: rgba(0, 0, 0, 0.7);
+color: #fff;
+padding: 20px;
+border-radius: 8px;
+}
+
 /* Hide the images by default 
 .mySlides {
-  display: none;
+display: none;
 }*/
 
 /* Next & previous buttons */
 .prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+cursor: pointer;
+position: absolute;
+top: 50%;
+width: auto;
+margin-top: -22px;
+padding: 16px;
+color: white;
+font-weight: bold;
+font-size: 18px;
+transition: 0.6s ease;
+border-radius: 0 3px 3px 0;
+user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+right: 0;
+border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+background-color: rgba(0,0,0,0.8);
 }
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+color: #f2f2f2;
+font-size: 15px;
+padding: 8px 12px;
+position: absolute;
+bottom: 8px;
+width: 100%;
+text-align: center;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+color: #f2f2f2;
+font-size: 12px;
+padding: 8px 12px;
+position: absolute;
+top: 0;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+cursor: pointer;
+height: 15px;
+width: 15px;
+margin: 0 2px;
+background-color: #bbb;
+border-radius: 50%;
+display: inline-block;
+transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+background-color: #717171;
 }
 
 /* Fading animation */
 .fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
+animation-name: fade;
+animation-duration: 1.5s;
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+from {opacity: .4}
+to {opacity: 1}
 }
 
 @media screen and (max-width: 768px) {
 body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
-    overflow-x: hidden; 
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+  color: #333;
+  overflow-x: hidden; 
 }
 
 #background-image {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('./EthanBanner.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    z-index: -1; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('./EthanBanner.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -1; 
 }
 
 .container {
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 0 10px; 
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 10px; 
 }
 
 header#top-banner {
-    color: #fff;
-    text-align: center;
-    padding: 20px 0;
-    position: relative;
-    z-index: 1; 
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+  position: relative;
+  z-index: 1; 
 }
 h1 {
-    margin: 0;
-    font-size: 2em;
-    position: absolute;
-    top: 0;
-    left: 10px;
+  margin: 0;
+  font-size: 2em;
+  position: absolute;
+  top: 0;
+  left: 10px;
 }
 h1 a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: inherit;
-    background-color: rgba(0, 0, 0, 0.7); 
-    padding: 10px; 
-    border-radius: 8px; 
+  color: #fff;
+  text-decoration: none;
+  font-weight: inherit;
+  background-color: rgba(0, 0, 0, 0.7); 
+  padding: 10px; 
+  border-radius: 8px; 
 }
 
 .description {
-    position: absolute;
-    top: 50%;
-    left: 5%;
-    transform: translate(0%, -50%);
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #fff;
-    padding: 20px;
-    border-radius: 8px;
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  transform: translate(0%, -50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 20px;
+  border-radius: 8px;
 }
 
 .resume-button {
-    display: inline-block;
-    background-color: #2b2c2d;
-    color: #ffffff;
-    padding: 10px 15px; 
-    text-decoration: none;
-    border-radius: 8px;
-    margin-top: 20px;
+  display: inline-block;
+  background-color: #2b2c2d;
+  color: #ffffff;
+  padding: 10px 15px; 
+  text-decoration: none;
+  border-radius: 8px;
+  margin-top: 20px;
 }
 
 }
