--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@ text-align: right;
 }
 
 
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {background-color: #a7a7a7;}
 
 .show {display:block;}
 * {box-sizing:border-box}
